-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.10.0
-
None
-
Arch Linux
-
-
2974b3d74 (dev), 3566971f8 (6.10)
I experienced a regression in Qt 6.10: applications that use QWindow are positioned at the top left corner by default, even if the application does not set its position.
Before Qt 6.10, these windows had Static gravity with no position specified, so the window manager placed them on the screen as they want. Since Qt 6.10, the windows have Static gravity with USPosition at 0,0, so window managers place the window to the top left corner of the screen. This causes an additional problem in Openbox and IceWM: these window managers don't ensure that the window is within the screen if USPosition is set, and due to Static gravity, the window frame is placed outside of the screen, causing that the window is partially off-screen.
The problem is caused by this commit:
https://code.qt.io/cgit/qt/qtbase.git/commit/?id=59d77a0162d92a9993b7bb4c593e88cbb8f8d9c8
Reverting that commit fixes the problem.
The problem can be reproduced by running a very basic program: main.c![]()
- is duplicated by
-
QTBUG-141064 Windows are opened at 0,0 position instead of position decided by the WM
-
- Closed
-
-
QTBUG-141241 QT6.10 ignores window manager hints for positioning
-
- Closed
-
| For Gerrit Dashboard: QTBUG-141099 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 685144,4 | Disable {position,resize}Automatic on first expose | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 685911,2 | Disable {position,resize}Automatic on first expose | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |