Disable {position,resize}Automatic on first expose

Disabling automatic positioning/resize after platform
window creation assumed that the platform window could
synchronously determine the automatic position/size,
either via QPlatformWindow::initialGeometry(), or via
platform APIs.

But for platforms like XCB, the automatic position is
determined by the window manager when the window is
first mapped. With the existing logic, we would end up
overriding the position when QWidget would set size
hints or resize the platform window during setVisible.

We now defer the reset of {position,resize}Automatic
until the expose event. Ideally we should do it only
when the window is first shown, but we don't have a
QWSI for tracking window visible-state.

Amends 59d77a0162d92a9993b7bb4c593e88cbb8f8d9c8.

Fixes: QTBUG-141099
Change-Id: I53a0205c7fbddf922b030b3f4bd9b6ce5c4915b9
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 2974b3d740a705767a1b6ca0779eb0d989364769)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>